# advent_of_code_2022

./: README.md  pyproject.toml
src/day1/: input  task.py  task1.py  task2.py
src/day10/: task.py
src/day11/: task.py
src/day2/: task.py  task1.py  task2.py
src/day3/: task.py  task1.py  task2.py
src/day4/: task.py  task1.py  task2.py
src/day5/: task.py  task1.py  task2.py
src/day6/: task.py
src/day7/: task.py
src/day8/: task.py
src/day9/: task.py
