[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Tecnarca <giacomo.astolfi@prima.it>"]
readme = "README.md"
packages = [{include = "advent_of_code"}]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
